--- a/src/app/layout/quran/quran.component.html
+++ b/src/app/layout/quran/quran.component.html
@@ -31,6 +31,9 @@
   
                       </div>
                   </div>
+                  <div class="lanf-buttonn w-100 d-flex justify-content-center">
+                    <button class=" btn btn-success px-5 mx-1" (click)=" changeLang()">changeLanguage</button>
+                  </div>
               </div>
           </div>
       </section>
@@ -40,6 +43,7 @@
           <p>&copy; 2023 Islamic App. All rights reserved.</p>
       </footer>
   </div>
+  
   }@else if (isArabic) {
   <div class="quran-page">
       <!-- Header Section -->
@@ -71,6 +75,9 @@
                           <em>يتوفر قريبا...</em>
   
                       </div>
+                  </div>
+                  <div class="lanf-buttonn w-100 d-flex justify-content-center">
+                    <button class=" btn btn-success px-5 mx-1" (click)=" changeLang()">تغيير اللغة</button>
                   </div>
               </div>
           </div>
