--- a/src/app/layout/quran/quran.component.css
+++ b/src/app/layout/quran/quran.component.css
@@ -1,4 +1,3 @@
-
 /* Quran Page Styles */
 .quran-page {
   font-family: "Arial", sans-serif;
@@ -36,8 +35,7 @@
   transition: -webkit-transform 0.3s ease, -webkit-box-shadow 0.3s ease;
   -o-transition: transform 0.3s ease, box-shadow 0.3s ease;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  transition: transform 0.3s ease, box-shadow 0.3s ease,
-    -webkit-transform 0.3s ease, -webkit-box-shadow 0.3s ease;
+  transition: transform 0.3s ease, box-shadow 0.3s ease, -webkit-transform 0.3s ease, -webkit-box-shadow 0.3s ease;
   cursor: pointer;
 }
 
